<resources>

    <!-- GERAL -->
    <string name="app_name">Scruiz</string>

    <!-- ARQUIVO DE PREFERÊNCIAS -->
    <string name="ARQ_PREF">Arq_Pref</string>
    <string name="ARQ_PREF_tpAuth">tipoAutent</string>

    <!-- SPLASH SCREEN -->
    <string name="carregando">Carregando informações. Aguarde&#8230;</string>
    <string name="pronto">Pronto!</string>

    <!-- TELA INICIAL -->
    <string name="img_responder_desc">img-responder-questões</string>
    <string name="img_configurar_desc">img-configurar</string>
    <string name="img_ranking_desc">img-ranking</string>

    <!-- QUIZ -->
    <string name="ola">Olá %s</string>
    <string name="questao_nr">Questão nº: %s</string>


    <!-- Firebase-Authentication [**QuikStart**] -->
    <string name="tela_login_titulo">Login</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="google_status_fmt">Usuário LOGADO: %s</string>
    <string name="google_sign_out">SAIR</string>
    <string name="google_disconnect">Cancelar conta</string>
    <string name="signed_out">--- NÃO logado ---</string>
    <string name="desc_google_sign_in">Faça login com sua conta do Google.</string>
    <string name="desc_email_sign_in">Conecte-se usando seu e-mail.</string>
    <string name="desc_anonimo_sign_in">[Não participa do Ranking]</string>
    <!-- Firebase-Authentication [QuikStart] *** fim ***-->

    <!-- LOGOUT activity -->
    <string name="tela_logout_titulo">Logout</string>
    <string name="logout_confirma">Confirma saída?</string>
    <string name="botao_sim">Sim</string>
    <string name="botao_nao">Não</string>
    <string name="logado_com_fmt">Tipo de Login: %s</string>
    <string name="usuario_fmt">Usuário LOGADO: %s</string>

    <!-- MENU BARRA SUPERIOR -->
    <string name="login_logout">Login | Logout</string>
    <string name="sobre">Sobre</string>

    <!-- MENU DE AUTENTICAÇÃO -->
    <string name="itemMenuAuth">Item do Menu de Autenticação</string>
    <string name="tituloItemMenuAuth">Titulo Menu Auth</string>
    <string name="descItemMenuAuth">Descrição Menu Auth</string>

    <!-- TRANSITÓRIOS -->
    <string name="em_implementacao">::: Em implementação&#8230;:::</string>
    <string name="clique_para_exibir_qst">Clique no botão para iniciar questionário!</string>

</resources>
