<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authenticator.ChooserActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:theme="@style/ToolBar" />
    <!-- TODO ver se precisa: -->
    <!-- android:minHeight="?attr/actionBarSize" -->

    <TextView
        android:id="@+id/textView_TelaLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/tela_logout_titulo"
        android:textSize="42sp"
        android:theme="@style/TituloGeral" />

    <TextView
        android:id="@+id/tipoAuth_textTview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/logado_com_fmt"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>
    <TextView
        android:id="@+id/usuario_textTview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/usuario_fmt"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/logout_confirma"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/logout_sim_nao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:visibility="visible">

        <Button
            android:id="@+id/logout_sim_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/botao_sim"
            android:textAllCaps="false"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/logout_nao_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/botao_nao"
            android:textAllCaps="false"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

</LinearLayout>